<resources>
    <string name="app_name">Swing Tracker</string>
    <string name="chart_workout">Update Chart</string>
    <string name="chart_height">450dp</string>
    <string name="save_button">Save Data</string>
    <string name="profile_image">Profile Image</string>
    <string name="forehand">Forehand:</string>
    <string name="backhand">Backhand:</string>
    <string name="overhead">Overhead:</string>
    <string name="widget_text">My Last Workout</string>
    <string name="zero">0</string>
    <string name="content_authority">com.jimtrinh9985gmail.swingtracker</string>
    <string name="list_title">Saved Workout Data</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Menu -->
    <string name="menu_chart">Chart View</string>
    <string name="menu_profile">Player Profile</string>
    <string name="menu_data">Saved Data</string>

    <string name="menu_delete">Delete Item</string>
    <string name="menu_delete_all">Delete All</string>

    <!-- Content Description -->
    <string name="cd_update_button">Load new Data and Update Chart</string>
    <string name="cd_save_button">Save Workout Data</string>
    <string name="profile_cd_image">Profile Image</string>
    <string name="player_cd_name">Player Name</string>
    <string name="player_cd_height">Player Height</string>
    <string name="player_cd_weight">Player Weight</string>
    <string name="player_cd_grip">Player Grip</string>
    <string name="player_cd_racket">Player Racket</string>
    <string name="cd_image_button">Delete Checked</string>
</resources>
