<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/A200_indigo"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteBox"
        android:buttonTint="@color/A900_indigo"
        android:layout_margin="24dp"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/dm_save_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Counter"
        android:layout_alignBaseline="@+id/deleteBox"
        android:layout_alignBottom="@+id/deleteBox"
        android:layout_toRightOf="@+id/deleteBox"
        android:layout_toEndOf="@+id/deleteBox"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/dm_save_date"
        android:layout_toEndOf="@+id/dm_save_date"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Counter"
                android:text="@string/forehand" />

            <TextView
                android:id="@+id/dm_forehand_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Counter"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:text="@string/zero" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Counter"
                android:text="@string/backhand" />

            <TextView
                android:id="@+id/dm_backhand_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Counter"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:text="@string/zero" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Counter"
                android:text="@string/overhead" />

            <TextView
                android:id="@+id/dm_overhead_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Counter"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:text="@string/zero" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>