<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/widget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row1"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_text"
                android:id="@+id/date_text"
                style="@style/WidgetSmallText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:id="@+id/date"
                style="@style/WidgetSmallText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row2"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forehand"
                android:id="@+id/forehand_text"
                style="@style/WidgetText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/zero"
                android:id="@+id/forehand_count"
                style="@style/WidgetText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row3"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backhand"
                android:id="@+id/backhand_text"
                style="@style/WidgetText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/zero"
                android:id="@+id/backhand_count"
                style="@style/WidgetText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/row4"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overhead"
                android:id="@+id/overhead_text"
                style="@style/WidgetText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/zero"
                android:id="@+id/overhead_count"
                style="@style/WidgetText" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>